# vtktest

./: CMakeCache.txt  CMakeLists.txt  Decimation.cxx  Makefile  README.md  a_ascii.stl  a_bin.stl  cmake_install.cmake  hehe.stl  not_flat_bin.stl
Decimation.app/Contents/: Info.plist
Decimation.app/Contents/MacOS/: Decimation
